Fix spacing issue on smaller screens

--- a/assets/css/_sass/_pages/_portfolio.scss
+++ b/assets/css/_sass/_pages/_portfolio.scss
@@ -144,6 +144,9 @@ li.portfolio-metadata__image {
 
 .portfolio-metadata__name {
 	font-weight: bold;
+	@media screen and (max-width: 768px) {
+		margin-top: .5rem;
+	}
 }
 
 .portfolio-metadata__details {
